<resources>

    <string name="app_name">Fote</string>
    <string name="menu_settings">Settings</string>
    <string name="example_month_year">SEPTEMBER 2012</string>
    <string name="example_month">SEPTEMBER</string>
    <string name="example_year">2012</string>
    <string name="example_date">25/12/2012</string>
    <string name="example_amount">$11000.22</string>
    <string name="example_comment">Lorem ipsum dolor sit amet, consectetur</string>
    <string name="total_spending_label">Total Spending: </string>
    <string name="fote_amount_label">How Much?</string>
    <string name="fote_category">Category</string>
    <string name="fote_comment_label">On What?</string>
    <string name="fote_date_label">When?</string>
    <string name="fote_date">DATE</string>
    <string name="fote_done">DONE</string>
    <string name="pref_sorting_label">Default Sorting Order</string>
	<string name="pref_sorting_default">Most Recent</string>
	<string name="about_email">fote.feedback@gmail.com</string>
	<string name="about_text1">Email me at </string>
	<string name="about_text2"> for any additional features you would like to see in future releases.</string>
	
</resources>