<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/row_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_date"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:layout_marginRight="10dp" />
    
    <TextView
        android:id="@+id/row_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:text="@string/example_amount"
        android:textColor="@color/black"
        android:textSize="13sp" />
    
    <TextView
        android:id="@+id/row_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_comment"
        android:textColor="@color/black"
        android:textSize="13sp" />
    

</LinearLayout>