<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" >

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="20dp"
            android:layout_height="35dp"
            android:drawSelectorOnTop="true"
            android:layout_marginRight="15dp" />

        <TextView
            android:id="@+id/current_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/spinner"
            android:text="@string/example_month"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/current_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/current_month"
            android:text="@string/example_year"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/total_spending_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_month"
            android:layout_toRightOf="@+id/spinner"
            android:text="@string/total_spending_label"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RelativeLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>